--- a/src/styles/phylotree.css
+++ b/src/styles/phylotree.css
@@ -1,12 +1,20 @@
 path.branch {
   transition: d 0.5s;
 }
- g.internal-node, g.node {
+
+g.internal-node, g.node {
   transition: transform 0.5s;
 }
- g.node > text {
+
+g.node > text {
   transition: transform 0.5s;
 }
- g.node > .branch-tracer {
+
+g.node > .branch-tracer {
   transition: all 0.5s;
+}
+
+text.label {
+  font-family: Courier;
+  font-size: 14px;
 }
